fix: hide overflow during preloader

--- a/styles/main.css
+++ b/styles/main.css
@@ -140,6 +140,7 @@ body {
 
 html {
     overflow-x: hidden;
+    overflow-y: hidden;
     scroll-behavior: smooth;
 }
 
